--- a/src/assets/style/variables/_colors.scss
+++ b/src/assets/style/variables/_colors.scss
@@ -1,6 +1,3 @@
-$checkbox-inactive: #767676;
-$checkbox-inactive-hover: #4f4f4f;
-$checkbox-active: #0075ff;
-$checkbox-active-hover: #005cc8;
-$button-blue: #0075ff;
-$button-blue-hover: #005cc8;
+$grey: #767676;
+$blue: #0075FF;
+$red: #DA2F3E;
