--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -1,5 +1,7 @@
 @import './variables/breakpoints';
+@import './variables/mixins';
 @import './variables/colors';
+@import './variables/icons';
 
 * {
   border: 0;
@@ -42,6 +44,11 @@ body {
     position: fixed;
     align-items: center;
     justify-content: center;
+    pointer-events: none;
+
+    * {
+      pointer-events: all;
+    } 
   }
 }
 
@@ -59,7 +66,6 @@ body {
   &-item {
     display: flex;
     align-items: center;
-    grid-template-columns: 1fr auto 1fr;
     padding: 1rem 2rem;
 
     * ~ * {
@@ -76,13 +82,20 @@ body {
 
     &__checkbox,
     &__remove {
-      width: 2rem;
       flex-shrink: 0;
     }
 
     &__task {
 
     }
+  }
+
+  &:empty::before {
+    content: attr(data-empty);
+    text-align: center;
+    font-style: italic;
+    opacity: 0.5;
+    padding: 1rem;
   }
 }
 
@@ -102,14 +115,15 @@ label.checkbox {
       width: 100%;
       height: 100%;
       margin: 0;
+      padding: 2px;
       cursor: pointer;
       display: block;
       position: relative;
       border-radius: 50%;
-      border: 2px solid $checkbox-inactive;
+      border: 2px solid $grey;
 
       &:hover {
-        border-color: $checkbox-inactive-hover;
+        border-color: darken($grey, 10%);
       }
     }
 
@@ -117,37 +131,69 @@ label.checkbox {
       display: flex;
       align-items: center;
       justify-content: center;
-      border-color: $checkbox-active;
+      border-color: $blue;
 
       &::before {
-        width: 75%;
-        height: 75%;
+        width: 100%;
+        height: 100%;
         content: '';
+        flex-shrink: 1;
         display: block;
         position: relative;
         border-radius: 50%;
-        background-color: $checkbox-active;
+        background-color: $blue;
       }
 
       &:hover {
-        border-color: $checkbox-active-hover;
+        border-color: darken($blue, 10%);
 
         &::before {
-          background-color: $checkbox-active-hover;
+          background-color: darken($blue, 10%);
         }
       }
     }
   }
 }
 
-.editable {
+.input {
   width: 100%;
   cursor: text;
+  line-height: 1.2;
   word-break: break-word;
 
   &[placeholder]:empty::before {
     content: attr(placeholder);
     color: rgba(255, 255, 255, 0.35);
+  }
+}
+
+.icon {
+  width: 1rem;
+  height: 1rem;
+
+  &::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+
+  &.trash::before {
+    @include icon($trash, $grey);
+  }
+
+  &-button {
+    cursor: pointer;
+    
+    &:hover {
+      &::before {
+        background-color: darken($grey, 10%);
+      }
+
+      &.trash::before {
+        background-color: $red;
+      }
+    } 
   }
 }
 
@@ -157,22 +203,26 @@ label.checkbox {
   font-weight: 600;
   cursor: pointer;
   display: flex;
+  user-select: none;
   align-items: center;
-  background-color: $button-blue;
+  background-color: $blue;
   transition: background-color 50ms ease;
 
   &:hover {
-    background-color: $button-blue-hover;
+    background-color: darken($blue, 10%);
   }
 
   &-icon::before {
-    content: '+';
+    width: 1rem;
+    height: 1rem;
+    content: '';
     color: white;
     display: inline-block;
     position: relative;
     font-size: 2rem;
     font-weight: 100;
     line-height: 0.5625;
+    @include icon($plus, white);
   }
 
   &-rounded {
@@ -199,12 +249,13 @@ label.checkbox {
   }
 
   .card {
-    width: 100%;
+    width: 100vw;
     padding: 2rem;
-    min-width: 35rem;
+    min-width: 30rem;
     border-radius: 1rem;
-    max-width: calc($md + 4em);
+    max-width: calc($sm - 4em);
     background-color: rgba(255, 255, 255, 0.05);
+    @include shading;
 
     &__footer {
       padding: 2rem 0 0;
@@ -230,24 +281,47 @@ label.checkbox {
       font-size: 1.3rem;
       border-radius: 0.5rem;
       background-color:rgba(255, 255, 255, 0.1);
-      box-shadow: 1px 1px 10px -5px rgba(0, 0, 0, 0.1);
+      @include shading;
+
+      * ~ * {
+        margin-left: 1.5rem;
+      }
   
       & ~ & {
         margin-top: 1rem;
+        border: 0;
       }
 
-      &, &:last-child {
+      &:last-child {
         border: 0;
       }
 
       &__task {
-        min-width: 20rem;
+        
       }
     }
+
+    &:empty::before {
+      padding: 1.78rem;
+    }
+  }
+  
+  label.checkbox {
+    width: 1.375rem;
+    height: 1.375rem;
   }
 
-  .button__text {
-    display: block;
+  .icon-button {
+    width: 1.125rem;
+    height: 1.125rem;
+  }
+
+  .button {
+    @include shading;
+
+    &__text {
+      display: block;
+    }
   }
 }
 
@@ -257,7 +331,7 @@ label.checkbox {
     background-color:#ffffff;
   }
 
-  .editable[placeholder]:empty::before {
+  .input[placeholder]:empty::before {
     color: rgba(0, 0, 0, 0.35);
   }
 
